# prompts

./: Dockerfile  README.md  pyproject.toml
prompts/src/: notifications.py  prompt_generator.py  run_prompt_generator.py
prompts/test/: test_prompt_generator.py
scripts/: run_prompt_generator.py
